<resources>
    <string name="app_name">To-do App</string>
    <string name="tast_todo_title">¿Qué se necesita hacer?</string>
    <string name="enter_task_hint">Ingresa la tarea aquí</string>
    <string name="date_title">Fecha</string>
    <string name="enter_date_hint">Sin fecha</string>
    <string name="save_task">Guardar</string>
    <string name="error_task_title_empty">Ingrese una tarea</string>
    <string name="error_task_date_empty">Ingrese una fecha</string>
    <string name="cb_task_finished">Terminé la tarea</string>
    <string name="tasks_status_active">Activas</string>
    <string name="tasks_status_completed">Completadas</string>
</resources>