<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal"
    tools:context=".ui.addTaskActivity.AddTaskActivity">

    <TextView
        android:id="@+id/tvTaskTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tast_todo_title"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/enter_task_hint"
        app:layout_constraintTop_toBottomOf="@id/tvTaskTodo"
        />

    <TextView
        android:id="@+id/tvDateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/date_title"
        app:layout_constraintTop_toBottomOf="@id/etTask"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/enter_date_hint"
        app:layout_constraintTop_toBottomOf="@id/tvDateTitle"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbTaskFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_task_finished"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>